Updates from ShareLaTeX

--- a/hw1/writeup/writeup.tex
+++ b/hw1/writeup/writeup.tex
@@ -12,11 +12,23 @@
 
 \begin{document}
 
-\title{Machine Learning () HW #1
+\title{Machine Learning () HW #1}
 \author{Will Clark \& Matthew DeLio \\
 University of Chicago Booth School of Business}
 \date{\today}
 \maketitle
+
+% Describe the data, show a plot of mileage vs price
+
+The data set for this exercise the sale price and observed mileage for 1000 used cars. We can see in Figure ???? that the expected inverse relationship between mileage and sale price is borne out by the data (i.e. high-mileage cars are less expensive than low-mileage cars).
+
+% Linear regression
+
+% knn
+% use in-sample RMSE
+% use n-fold cross-validation
+
+% Predict car price with cross-validated knn and with linear model
 
 \end{document}
 
