Updates from ShareLaTeX

--- a/hw1/writeup/writeup.tex
+++ b/hw1/writeup/writeup.tex
@@ -22,6 +22,12 @@ University of Chicago Booth School of Business}
 
 The data set for this exercise the sale price and observed mileage for 1000 used cars. We can see in Figure ???? that the expected inverse relationship between mileage and sale price is borne out by the data (i.e. high-mileage cars are less expensive than low-mileage cars).
 
+To describe this data, we first estimate a linear model of mileage on price:
+
+\[ p_i = \alpha + \beta m_i + \varepsilon_i \]
+
+where \(p_i\) is the price of car \(i\), \(m_i\) is the observed mileage on car \(i\), \(\alpha\) and \(\beta\) are estimated regression coefficients, and \(\varepsilon\) is the residual.
+
 % Linear regression
 
 % knn
