--- a/hw1/writeup/writeup.tex
+++ b/hw1/writeup/writeup.tex
@@ -20,13 +20,21 @@ University of Chicago Booth School of Business}
 
 % Describe the data, show a plot of mileage vs price
 
-The data set for this exercise the sale price and observed mileage for 1000 used cars. We can see in Figure ???? that the expected inverse relationship between mileage and sale price is borne out by the data (i.e. high-mileage cars are less expensive than low-mileage cars).
+The data set for this exercise the sale price and observed mileage for 1000 used cars. We can see in \cref{fig:linear} that the expected inverse relationship between mileage and sale price is borne out by the data (i.e. high-mileage cars are less expensive than low-mileage cars).
 
 To describe this data, we first estimate a linear model of mileage on price:
-
 \[ p_i = \alpha + \beta m_i + \varepsilon_i \]
+where \(p_i\) is the price of car \(i\), \(m_i\) is the observed mileage on car \(i\), \(\alpha\) and \(\beta\) are estimated regression coefficients, and \(\varepsilon_i\) is the residual. We fit a generalized linear model to the data and find that \(\alpha=56359.7\) and \(\beta=-0.35\). That is, a hypothetical used car with no miles would sell for about \$56 thousand, and each additional mile driven lowers a car's expected selling price by \$0.35.
 
-where \(p_i\) is the price of car \(i\), \(m_i\) is the observed mileage on car \(i\), \(\alpha\) and \(\beta\) are estimated regression coefficients, and \(\varepsilon\) is the residual.
+As depicted in \cref{fig:linear}, this model appears to be a weak fit for the data. It improperly values ca
+
+\begin{figure}[!htb]
+  \centering
+  \includegraphics[scale=.5]{linear_fit.pdf}
+  \caption{Linear Regression of Price on Mileage}
+  \label{fig:linear}
+\end{figure}
+
 
 % Linear regression
 
