--- a/hw1/writeup/writeup.tex
+++ b/hw1/writeup/writeup.tex
@@ -50,27 +50,27 @@ The decision we are faced with is choosing a value for the k-number of nearest n
 To choose $k$ using out-of-sample RMSE, we break our data into a training sample (with 900 data points) to train a model, and a test sample (with the remaining 100 points) to estimate the model's goodness of fit. We then estimate a model for all integer values of $k \in (2,100)$ and compare their out-of-sample RMSEs, where RMSE is defined by:
 \[ \text{RMSE} = \sqrt{\frac{1}{n} \sum_{i=1}^{n} \left( p_i - \hat{p_i} \right)^2} \]
 
-where $p_i$ is the observed price of car $i$ and $\hat{p_i}$ is the predicted price of car $i$ given its mileage. The RMSE is a measure of how closely a model fits the data; in this case, what we care about is how well the model fits data points that it has not been trained on. We then choose the $k$ that produces the lowest out-of-sample RMSE. The results are depicted in \cref{fig:sweep} (in the red line). We can see that the minimum RMSE occurs at $k=12$, which is circled in the plot.\footnote{The value of \(k\) selected depends heavily on the hold-out sample, which is selected randomly. We set R's random number generator seed in this example, but letting it vary produces very different values of \(k\) fluctuating around the cross-validated \(k\) shown in next section.}
+where $p_i$ is the observed price of car $i$ and $\hat{p_i}$ is the predicted price of car $i$ given its mileage. The RMSE is a measure of how closely a model fits the data; in this case, what we care about is how well the model fits data points that it has not been trained on. We then choose the $k$ that produces the lowest out-of-sample RMSE. The results are depicted in \cref{fig:sweep} (in the red line). We can see that the minimum RMSE occurs at $k=12$, which is circled in the plot.\footnote{The value of $k$ selected depends heavily on the hold-out sample, which is selected randomly. We manually seeded R's random number generator for this example, but letting it vary produces very different values of $k$ fluctuating around the optimal cross-validated $k$ found in next section.}
 
 % use n-fold cross-validation
 \subsection{n-fold Cross Validation}\label{sec:cv}
 
-The alternative method is to choose \(k\) via cross validation. In this method, we will measure out-of-sample fit in the same method as in the prior section (via RMSE), but we will average the out-of-sample fit of ten different training sets (i.e. n-fold cross-validation with \(n=10\)). The algorithm, briefly:
+The alternative method is to choose $k$ via cross validation. In this method, we measure out-of-sample fit using the same method as in the prior section (via RMSE), but, instead, we average the out-of-sample fit of ten different training sets (i.e. n-fold cross-validation with $n=10$). The algorithm, briefly:
 \begin{itemize}
-\item For all \(k \in (2,100)\):
+\item For all $k \in (2,100)$:
 \begin{itemize}
 \item Break the sample into 10 different data sets
-\item For all \(n \in (1, 10)\):
+\item For all $n \in (1, 10)$:
 \begin{itemize}
-\item Hold out the \(n\)-th data set; train a model on the remaining data
-\item Calculate the RMSE of the \(n\)-th (held out) data set based on the predicted values of the k-nn model
+\item Hold out the $n$-th data set; train a model on the remaining data
+\item Calculate the RMSE of the $n$-th (held out) data set based on the predicted values of the k-nn model
 \end{itemize}
-\item Each \(k\) will have \(n\) RMSE values; take the average of all these RMSEs.
+\item Each $k$ will have $n$ RMSE values; take the average of all these RMSEs.
 \end{itemize}
-\item Select the model (\(k\)) with the lowest average RMSE (which we will call cross-validated error).
+\item Select the model ($k$) with the lowest average RMSE (which we will call cross-validated error).
 \end{itemize}
 
-The resulting RMSE for various values of k is shown in \cref{fig:sweep} (the light blue line). The \(k\) that results in the lowest cross-validated error is \(k=40\), which is circled in blue in the figure.\footnote{As a comparison, using the \texttt{kknn} package's built-in algorithm for hold-one-out cross-validation selects a model with \(k=41\), so our result is close to optimal.}
+The resulting RMSE for various values of k is shown in \cref{fig:sweep} (the light blue line). The choice of $k$ that results in the lowest cross-validated error is $k=40$, which is circled in blue in the figure.\footnote{As a comparison, using the \texttt{kknn} package's built-in algorithm for hold-one-out cross-validation selects a model with $k=41$, so our result is close to optimal.}
 
 \begin{figure}[!htb]
   \centering
@@ -80,7 +80,10 @@ The resulting RMSE for various values of k is shown in \cref{fig:sweep} (the lig
 \end{figure}
 
 \section{Model Predictions}
-Before making any predictions we first compare the linear model found in \cref{sec:linear} to the ones developed in \cref{sec:oos,sec:cv}.  To make a visual comparison of the algorithms, we use \cref{fig:models} to see how they track the car pricing data.  In addition to the linear model, we show how the kNN algorithm tracks with a low value of $k=12$ (the one indicated in \cref{sec:oos}), a medium one at $k=40$ (prescribed through our cross-validation method in \cref{sec:cv}), and finally one with $k=500$ (a arbitrary and unreasonably large choice).  With these three value, the Bias-Variance trade-off is clearly illustrated.  For our small value of $k=12$, kNN tracks the data closely but also tends to latch onto variance in the data (seen as tracking jitter).  On the other side of the spectrum, as $k$ increases to an unreasonably large value of $k=500$ it tends to ignore the variance and introduces a large amount of bias (a smooth line that miss-predicts greatly at the tail).  Our prior work indicated that at $k=40$ we have achieve a good trade-off where the model still tracks the data-set well, but does not begin tracking too much of the variance.
+
+Before making any predictions we first compare the linear model found in \cref{sec:linear} to the ones developed in \cref{sec:oos,sec:cv}.  We make a comparison of the algorithms using \cref{fig:models} to see how they visually track the car pricing data.  In addition to showing the linear model's fit, we show how the kNN algorithm tracks with a low value of $k=12$ (the one indicated in \cref{sec:oos}), a medium one at $k=40$ (prescribed through the cross-validation method from \cref{sec:cv}), and finally one with $k=500$ (a arbitrary and unreasonably large choice).
+
+These three values illustrate the Bias-Variance trade-off clearly.  For our small value of $k=12$, kNN tracks the data closely but also tends to latch onto variance in the data (seen as tracking jitter).  On the other side of the spectrum, as $k$ increases to an unreasonably large value of $k=500$ it tends to ignore the variance (it's smooth), but introduces a large amount of bias (mispredicting greatly at higher mileages).  Our prior work indicated that $k=40$ would achieve a good trade-off where the algorithm could still track the data well, without introducing too much bias and without tracking too much variance as well.  Indeed we see that this choice yields a much smoother line than $k=12$ and introduces no noticeable bias.
 
 \begin{figure}[!htb]
   \centering
@@ -89,11 +92,11 @@ Before making any predictions we first compare the linear model found in \cref{s
   \label{fig:models}
 \end{figure}
 
-Furthermore, \cref{tab:rmse_compare} reveals a more quantitative comparison of the possible model choices\footnote{this comparison uses the same training/test sample used in \cref{sec:oos}}.  Here it is evident that the RMSE is worse for the Linear and $k=500$ cases.  Between $k=12$ and $k=40$ it appears as though the more complex model  at $k=12$ wins.  However, as pointed out in previous sections the 10-fold cross-validated value of $k=40$ likely yields a better parameter choice for further out-of-sample predictions and will be used for the remainder of this section.
+For a more quantitative comparison of these models we turn to, \cref{tab:rmse_compare}.\footnote{This comparison uses the same training/test sample described in \cref{sec:oos}}  Here it is immediately evident that the Linear and $k=500$ algorithms exhibit the worse RSME's.  For the better two, $k=12$ and $k=40$, it appears as though the $k=12$ model slightly beats $k=40$.  However, as pointed out in previous sections the 10-fold cross-validated value of $k=40$ is likely a better parameter choice for out-of-sample predictions and will be used for the remainder of this section.
 
 \input{rmse_compare.tex}
 
-We then use the linear model and kNN algorithm to predict the price of a car with 100,000 miles.  At this mileage, the linear model predicts that the car's value is \$21,362.33 while the kNN model predicts \$17,936.67 (these predictions are shown as colored circles in \cref{fig:predict}).  Examining this figure further, the mass of cars priced below \$20,000 with roughly 100,000 miles give us more confidence in kNN over the linear model.
+With our algorithm (kNN) and parameter ($k=40$) chosen, we then use compare the predictions of the linear model and kNN algorithm for a car with 100,000 miles.  At this mileage, the linear model predicts that the car's value is \$21,362.33 while the kNN model predicts \$17,936.67 (these predictions are shown as colored circles in \cref{fig:predict}).  Examining this figure further, the mass of cars priced below \$20,000 with roughly 100,000 miles give us more confidence in kNN over the linear model.
 
 % > preds
 %   mileage linear.pred knn.pred
