add emails to header

--- a/hw1/writeup/writeup.tex
+++ b/hw1/writeup/writeup.tex
@@ -13,7 +13,8 @@
 \begin{document}
 
 \title{Machine Learning (41204-01)\\HW \#1}
-\author{Will Clark \& Matthew DeLio \\
+\author{Will Clark $\vert$ Matthew DeLio \\
+\texttt{will.clark@chicagobooth.edu} $\vert$ \texttt{mdelio@chicagobooth.edu} \\
 University of Chicago Booth School of Business}
 \date{\today}
 \maketitle
