--- a/hw2/writeup/2p_predict.tex
+++ b/hw2/writeup/2p_predict.tex
@@ -1,10 +1,10 @@
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Sun Oct  4 21:25:07 2015
+% Sun Oct  4 21:31:20 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
   \hline
- & Year & Mileage & $\hat(price)$ \\ 
+ & Year & Mileage & $\widehat{price}$ \\ 
   \hline
 1 & 2008 & 75000 & 31678.22 \\ 
    \hline
