Updates from ShareLaTeX

--- a/hw2/writeup/2p_predict.tex
+++ b/hw2/writeup/2p_predict.tex
@@ -4,7 +4,7 @@
 \centering
 \begin{tabular}{rrrr}
   \hline
- & Year & Mileage & $\hat(price)$ \\ 
+ & Year & Mileage & $\widehat{price}$ \\ 
   \hline
 1 & 2008 & 75000 & 31678.22 \\ 
    \hline
