--- a/hw2/writeup/1p_predict.tex
+++ b/hw2/writeup/1p_predict.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Sun Oct  4 21:31:20 2015
+% Sun Oct  4 21:32:34 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrr}
@@ -9,6 +9,6 @@
 1 & 100000 & 16676.18 \\ 
    \hline
 \end{tabular}
-\caption{Predicted Value with 1 Attribute} 
+\caption{Predicted Price with 1 Attribute} 
 \label{tab:1p_predict}
 \end{table}
