--- a/hw2/writeup/2p_predict.tex
+++ b/hw2/writeup/2p_predict.tex
@@ -1,5 +1,5 @@
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Sun Oct  4 21:31:20 2015
+% Sun Oct  4 21:32:34 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrr}
@@ -9,6 +9,6 @@
 1 & 2008 & 75000 & 31678.22 \\ 
    \hline
 \end{tabular}
-\caption{Predicted Values with 2 Attributes} 
+\caption{Predicted Price with 2 Attributes} 
 \label{tab:2p_predict}
 \end{table}
