--- a/utils/header.tex
+++ b/utils/header.tex
@@ -11,6 +11,10 @@
 \usepackage{subcaption}
 \usepackage{titlesec}
 \usepackage{bm}
+
+\usepackage{float}
+\floatstyle{plaintop}
+
 % \usepackage{hyperref}
 
 % \lstset{
