Remove row numbers from prediction tables.

--- a/hw2/writeup/1p_predict.tex
+++ b/hw2/writeup/1p_predict.tex
@@ -1,12 +1,12 @@
-% latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Wed Oct  7 12:13:34 2015
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Wed Oct  7 15:41:42 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrr}
+\begin{tabular}{rr}
   \hline
- & Mileage & $\widehat{price}$ \\ 
+Mileage & $\widehat{price}$ \\ 
   \hline
-1 & 100000 & 16676.18 \\ 
+100000 & 16676.18 \\ 
    \hline
 \end{tabular}
 \caption{Predicted Price with 1 Attribute} 
