--- a/hw2/writeup/2p_predict.tex
+++ b/hw2/writeup/2p_predict.tex
@@ -1,12 +1,12 @@
-% latex table generated in R 3.2.2 by xtable 1.7-4 package
-% Wed Oct  7 12:13:34 2015
+% latex table generated in R 3.1.2 by xtable 1.7-4 package
+% Wed Oct  7 15:41:42 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrr}
+\begin{tabular}{rrr}
   \hline
- & Year & Mileage & $\widehat{price}$ \\ 
+Year & Mileage & $\widehat{price}$ \\ 
   \hline
-1 & 2008 & 75000 & 31678.22 \\ 
+2008 & 75000 & 31415.87 \\ 
    \hline
 \end{tabular}
 \caption{Predicted Price with 2 Attributes} 
