Add some data exports.

--- a/hw2/writeup/head_dat.tex
+++ b/hw2/writeup/head_dat.tex
@@ -1,16 +1,16 @@
 % latex table generated in R 3.1.2 by xtable 1.7-4 package
-% Wed Oct  7 14:20:38 2015
+% Wed Oct  7 15:46:02 2015
 \begin{table}[ht]
 \centering
 \begin{tabular}{rllrrll}
   \hline
 price & trim & isOneOwner & mileage & year & color & displacement \\ 
   \hline
-46917 & other & t & 69302 & 2007 & other & other \\ 
-  57991 & 550 & f & 26225 & 2012 & White & 4.6 \\ 
-  44990 & 550 & f & 33842 & 2011 & Black & 5.5 \\ 
-  2900 & 430 & f & 231760 & 2001 & other & other \\ 
-  59977 & 550 & t & 22243 & 2011 & White & 5.5 \\ 
+40995 & other & f & 18505 & 2011 & Silver & other \\ 
+  26850 & 550 & f & 70050 & 2009 & Silver & 5.5 \\ 
+  28991 & 550 & f & 77977 & 2008 & other & 5.5 \\ 
+  8850 & 500 & f & 88547 & 2002 & Black & other \\ 
+  21994 & 550 & f & 99493 & 2007 & Silver & 5.5 \\ 
    \hline
 \end{tabular}
 \caption{First Few Samples of the Dataset} 
